indented html to read easier

--- a/index.html
+++ b/index.html
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Spring 2019 galley</title>
-	<script type="text/javascript" src="gallery.js"></script>
-	</head>
-	<body>
+		<title>My Spring 2019 galley</title>
+		<link href="gallery.css" rel="stylesheet" type="text/css">
+		<script type="text/javascript" src="gallery.js"></script>
+</head>
+<body>
 
-<!--overall slideshow-->
+		<!--overall slideshow-->
+		<div class="slideshow">
+			<!--start Slide 1-->
+			<div class="slide">
+					<h2>Slide 1</h2>
+					<img src="https://cdn2-www.dogtime.com/assets/uploads/gallery/30-impossibly-cute-puppies/impossibly-cute-puppy-2.jpg" alt="Puppy walking through water" />
+					<div class="caption">Cute doggo dislikes walking through water</div>
+			</div>  <!--end of slide 1-->
 
-<div class="slideshow">
-<!--start Slide 1-->
-	<div class="slide">
-	<h2>Slide 1</h2>
-	<img src="https://cdn2-www.dogtime.com/assets/uploads/gallery/30-impossibly-cute-puppies/impossibly-cute-puppy-2.jpg" alt="Puppy walking through water" />
-	<div class="caption">Cute doggo dislikes walking through water</div>
-	</div>  <!--end of slide 1-->
-</div>
+		<!--start Slide 2-->
+		<div class="slide">
+			<h2>Slide 2</h2>
+			<img src="http://4.bp.blogspot.com/-0-IufeVnI24/UU8-e_nalAI/AAAAAAAAg2I/Qphk66kHMds/s640/cute-puppy-pictures-013.jpg" alt="Corgi puppy looking confused" />
+			<div class="caption">Corgi pup looking from behind</div>
+		</div>  <!--end of slide 2-->
 
-<!--start Slide 2-->
-	<div class="slide">
-	<h2>Slide 2</h2>
-	<img src="http://4.bp.blogspot.com/-0-IufeVnI24/UU8-e_nalAI/AAAAAAAAg2I/Qphk66kHMds/s640/cute-puppy-pictures-013.jpg" alt="Corgi puppy looking confused" />
-	<div class="caption">Corgi pup looking from behind</div>
-	</div>  <!--end of slide 2-->
+		<!--start slide 3-->
+		<div class="slide">
+					<h2>Slide 3</h2>
+					<img src="https://cdn.images.express.co.uk/img/dynamic/128/590x/secondary/Cute-puppy-pictures-science-why-adorable-puppies-1355345.jpg" alt="Brown and white puppy looking sad" />
+					<div class="caption">Brown and white puppy needs more attention</div>
+		</div>  <!--end of slide 3-->
 
-<!--start slide 3-->
-	<div class="slide">
-	<h2>Slide 3</h2>
-	<img src="https://cdn.images.express.co.uk/img/dynamic/128/590x/secondary/Cute-puppy-pictures-science-why-adorable-puppies-1355345.jpg" alt="Brown and white puppy looking sad" />
-	<div class="caption">Brown and white puppy needs more attention</div>
-	</div>  <!--end of slide 3-->
+		<!--start Slide 4-->
+		<div class="slide">
+					<h2>Slide 4</h2>
+					<img src="http://images6.fanpop.com/image/photos/41400000/adorable-puppies-cute-puppies-41481454-1200-630.jpg" alt="Puppies hanging in socks on clothesline" />
+					<div class="caption">Four tan pups hanging in mismatched socks</div>
+		</div> <!--end of slide 4-->
 
-<!--start Slide 4-->
-	<div class="slide">
-	<h2>Slide 4</h2>
-	<img src="http://images6.fanpop.com/image/photos/41400000/adorable-puppies-cute-puppies-41481454-1200-630.jpg" alt="Puppies hanging in socks on clothesline" />
-	<div class="caption">Four tan pups in mismatched socks</div>
-	</div> <!--end of slide 4-->
+		<!--start Slide 5-->
+		<div class="slide">
+					<h2>Slide 5</h2>
+					<img src="https://i.pinimg.com/originals/c2/3a/97/c23a979dd0335c88d5e3c3307a7d50d2.png" alt="Puppy sleeping in a corn tortilla" />
+					<div class="caption">Snack that's too cute to eat</div>
+		</div>  <!--end of slide 5-->
 
-<!--start Slide 5-->
-	<div class="slide">
-	<h2>Slide 5</h2>
-	<img src="https://i.pinimg.com/originals/c2/3a/97/c23a979dd0335c88d5e3c3307a7d50d2.png" alt="Puppy sleeping in a corn tortilla" />
-	<div class="caption">Snack that's too cute to eat</div>
-	</div>  <!--end of slide 5-->
-</div> <!-- end of slideshow-->
-	<!--start buttons-->
-<div class="button">
+		</div> <!-- end of slideshow-->
+	
+		<!--start buttons-->
+		<div class="button">
 		<!--previous button-->
-		<button type="button" class="previous"></button>
-		<!--next button-->
-		<button type ="button" class="next"></button>
-</div>
-	<!--end buttons-->
-	</body>
-	</html>
+							<button type="button" class="previous">Previous</button>
+							<!--next button-->
+							<button type ="button" class="next">Next</button>
+		</div>
+		<!--end buttons-->
+</body>
+</html>
