centered image and txt

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="slide" id="slide1">
 					<h2>Slide 1</h2>
 					<img src="https://cdn2-www.dogtime.com/assets/uploads/gallery/30-impossibly-cute-puppies/impossibly-cute-puppy-2.jpg" alt="Puppy walking through water" />
-					<div class="caption">Cute doggo dislikes walking through water</div>
+					<br> <div class="caption">Cute doggo dislikes walking through water</div>
 			</div>  <!--end of slide 1-->
 
 		<!--start Slide 2-->
