--- a/index.html
+++ b/index.html
@@ -21,32 +21,32 @@
 		<div class="slide" id="slide2">
 			<h2>Slide 2</h2>
 			<img src="http://4.bp.blogspot.com/-0-IufeVnI24/UU8-e_nalAI/AAAAAAAAg2I/Qphk66kHMds/s640/cute-puppy-pictures-013.jpg" alt="Corgi puppy looking confused" />
-			<div class="caption">Corgi pup looking from behind</div>
+			<br> <div class="caption">Corgi pup looking from behind</div>
 		</div>  <!--end of slide 2-->
 
 		<!--start slide 3-->
 		<div class="slide" id="slide3">
 					<h2>Slide 3</h2>
 					<img src="https://cdn.images.express.co.uk/img/dynamic/128/590x/secondary/Cute-puppy-pictures-science-why-adorable-puppies-1355345.jpg" alt="Brown and white puppy looking sad" />
-					<div class="caption">Brown and white puppy needs more attention</div>
+					<br> <div class="caption">Brown and white puppy needs more attention</div>
 		</div>  <!--end of slide 3-->
 
 		<!--start Slide 4-->
 		<div class="slide" id="slide4">
 					<h2>Slide 4</h2>
 					<img src="http://images6.fanpop.com/image/photos/41400000/adorable-puppies-cute-puppies-41481454-1200-630.jpg" alt="Puppies hanging in socks on clothesline" />
-					<div class="caption">Four tan pups hanging in mismatched socks</div>
+					<br> <div class="caption">Four tan pups hanging in mismatched socks</div>
 		</div> <!--end of slide 4-->
 
 		<!--start Slide 5-->
 		<div class="slide" id="slide5">
 					<h2>Slide 5</h2>
 					<img src="https://i.pinimg.com/originals/c2/3a/97/c23a979dd0335c88d5e3c3307a7d50d2.png" alt="Puppy sleeping in a corn tortilla" />
-					<div class="caption">Snack that's too cute to eat</div>
+					<br> <div class="caption">Snack that's too cute to eat</div>
 		</div>  <!--end of slide 5-->
 
 		</div> <!-- end of slideshow-->
-	
+	<br> <br>
 		<!--start buttons-->
 		<div class="button">
 		<!--previous button-->
